Fix contact button so spacing on mobile is not too tight against footer

--- a/stylesheets/scss/components/_buttons.scss
+++ b/stylesheets/scss/components/_buttons.scss
@@ -52,7 +52,7 @@
 
     @media (max-width:480px) {
         text-align: center;
-        margin: 0 $global-spacing-unit;
+        margin-bottom: $global-spacing-unit;
     }
 }
 
